// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Date time range selector/DateTime Picker Default 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--date-time-picker__wrapper"
      data-testid="date-time-picker"
      id="datetimepicker-iot--date-time-picker__wrapper"
      onKeyDown={[Function]}
    >
      <div
        className="iot--date-time-picker__box "
      >
        <div
          className="iot--date-time-picker__field"
          data-testid="date-time-picker__field"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="bx--tooltip--definition bx--tooltip--a11y"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <button
              aria-describedby="definition-tooltip-2"
              className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
              onBlur={[Function]}
              onFocus={[Function]}
              type="button"
            >
              Last 30 minutes
            </button>
            <span
              className="bx--assistive-text"
              id="definition-tooltip-2"
              role="tooltip"
            >
              2018-10-28 07:04 to Now
            </span>
          </span>
          <svg
            aria-label="Calendar"
            className="iot--date-time-picker__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </div>
        <div
          className="iot--date-time-picker__menu"
          role="listbox"
        >
          <div
            className="iot--date-time-picker__menu-scroll"
          >
            <div
              onKeyDown={[Function]}
            >
              <ol
                className="bx--list--ordered"
              >
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--current"
                >
                  2018-10-28 07:04 to Now
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--custom"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Custom Range
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset iot--date-time-picker__listitem--preset-selected"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 30 minutes
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 1 hour
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 6 hours
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 12 hours
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 24 hours
                </li>
              </ol>
            </div>
          </div>
          <div
            className="iot--date-time-picker__menu-btn-set"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--date-time-picker__menu-btn iot--date-time-picker__menu-btn-cancel bx--btn bx--btn--md bx--btn--secondary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              Cancel
            </button>
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--date-time-picker__menu-btn iot--date-time-picker__menu-btn-apply bx--btn bx--btn--md bx--btn--primary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Date time range selector/DateTime Picker Light version 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--date-time-picker__wrapper"
      data-testid="date-time-picker"
      id="datetimepicker-iot--date-time-picker__wrapper"
      onKeyDown={[Function]}
    >
      <div
        className="iot--date-time-picker__box iot--date-time-picker__box--light"
      >
        <div
          className="iot--date-time-picker__field"
          data-testid="date-time-picker__field"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="bx--tooltip--definition bx--tooltip--a11y"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <button
              aria-describedby="definition-tooltip-10"
              className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
              onBlur={[Function]}
              onFocus={[Function]}
              type="button"
            >
              Last 30 minutes
            </button>
            <span
              className="bx--assistive-text"
              id="definition-tooltip-10"
              role="tooltip"
            >
              2018-10-28 07:04 to Now
            </span>
          </span>
          <svg
            aria-label="Calendar"
            className="iot--date-time-picker__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </div>
        <div
          className="iot--date-time-picker__menu"
          role="listbox"
        >
          <div
            className="iot--date-time-picker__menu-scroll"
          >
            <div
              onKeyDown={[Function]}
            >
              <ol
                className="bx--list--ordered"
              >
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--current"
                >
                  2018-10-28 07:04 to Now
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--custom"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Custom Range
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset iot--date-time-picker__listitem--preset-selected"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 30 minutes
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 1 hour
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 6 hours
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 12 hours
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 24 hours
                </li>
              </ol>
            </div>
          </div>
          <div
            className="iot--date-time-picker__menu-btn-set"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--date-time-picker__menu-btn iot--date-time-picker__menu-btn-cancel bx--btn bx--btn--md bx--btn--secondary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              Cancel
            </button>
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--date-time-picker__menu-btn iot--date-time-picker__menu-btn-apply bx--btn bx--btn--md bx--btn--primary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Date time range selector/DateTime Picker Locale 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--date-time-picker__wrapper"
      data-testid="date-time-picker"
      id="datetimepicker25-iot--date-time-picker__wrapper"
      onKeyDown={[Function]}
    >
      <div
        className="iot--date-time-picker__box "
      >
        <div
          className="iot--date-time-picker__field"
          data-testid="date-time-picker__field"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            title="01/04/2020 12:34 to 06/04/2020 10:49"
          >
            01/04/2020 12:34 to 06/04/2020 10:49
          </span>
          <svg
            aria-label="Calendar"
            className="iot--date-time-picker__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </div>
        <div
          className="iot--date-time-picker__menu"
          role="listbox"
        >
          <div
            className="iot--date-time-picker__menu-scroll"
          >
            <div
              className="iot--date-time-picker__custom-wrapper"
            >
              <fieldset
                className="bx--fieldset iot--date-time-picker__menu-formgroup"
              >
                <legend
                  className="bx--label iot--date-time-picker__menu-formgroup"
                >
                  Custom range
                </legend>
                <div
                  className="bx--form-item"
                >
                  <fieldset
                    className="bx--radio-button-group bx--radio-button-group--label-right"
                  >
                    <div
                      className="bx--radio-button-wrapper"
                    >
                      <input
                        checked={false}
                        className="bx--radio-button"
                        id="datetimepicker25-relative"
                        name="datetimepicker25-radiogroup"
                        onChange={[Function]}
                        onKeyDown={[Function]}
                        type="radio"
                        value="RELATIVE"
                      />
                      <label
                        className="bx--radio-button__label"
                        htmlFor="datetimepicker25-relative"
                      >
                        <span
                          className="bx--radio-button__appearance"
                        />
                        <span
                          className=""
                          dir="auto"
                        >
                          Relative
                        </span>
                      </label>
                    </div>
                    <div
                      className="bx--radio-button-wrapper"
                    >
                      <input
                        checked={true}
                        className="bx--radio-button"
                        id="datetimepicker25-absolute"
                        name="datetimepicker25-radiogroup"
                        onChange={[Function]}
                        onKeyDown={[Function]}
                        type="radio"
                        value="ABSOLUTE"
                      />
                      <label
                        className="bx--radio-button__label"
                        htmlFor="datetimepicker25-absolute"
                      >
                        <span
                          className="bx--radio-button__appearance"
                        />
                        <span
                          className=""
                          dir="auto"
                        >
                          Absolute
                        </span>
                      </label>
                    </div>
                  </fieldset>
                </div>
              </fieldset>
              <div
                data-testid="date-time-picker-datepicker"
              >
                <div
                  className="iot--date-time-picker__datepicker"
                >
                  <div
                    className="bx--form-item"
                  >
                    <div
                      className="bx--date-picker bx--date-picker--range bx--date-picker--nolabel"
                      onClose={[Function]}
                    >
                      <div
                        className="bx--date-picker-container bx--date-picker--nolabel"
                      >
                        <div
                          className="bx--date-picker-input__wrapper"
                        >
                          <input
                            className="bx--date-picker__input"
                            disabled={false}
                            id="datetimepicker25-date-picker-input-start"
                            onChange={[Function]}
                            onClick={[Function]}
                            pattern="\\\\d{1,2}\\\\/\\\\d{1,2}\\\\/\\\\d{4}"
                            type="text"
                          />
                          <svg
                            aria-hidden={true}
                            className="bx--date-picker__icon"
                            fill="currentColor"
                            focusable="false"
                            height={16}
                            onClick={[Function]}
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            viewBox="0 0 32 32"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        className="bx--date-picker-container bx--date-picker--nolabel"
                      >
                        <div
                          className="bx--date-picker-input__wrapper"
                        >
                          <input
                            className="bx--date-picker__input"
                            disabled={false}
                            id="datetimepicker25-date-picker-input-end"
                            onChange={[Function]}
                            onClick={[Function]}
                            pattern="\\\\d{1,2}\\\\/\\\\d{1,2}\\\\/\\\\d{4}"
                            type="text"
                          />
                          <svg
                            aria-hidden={true}
                            className="bx--date-picker__icon"
                            fill="currentColor"
                            focusable="false"
                            height={16}
                            onClick={[Function]}
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            viewBox="0 0 32 32"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <fieldset
                  className="bx--fieldset iot--date-time-picker__menu-formgroup"
                >
                  <legend
                    className="bx--label iot--date-time-picker__menu-formgroup"
                  >
                    
                  </legend>
                  <div
                    className="iot--date-time-picker__fields-wrapper"
                  >
                    <div
                      className="iot--time-picker__wrapper iot--time-picker__wrapper--with-spinner"
                      data-testid="time-picker-spinner-wrapper"
                    >
                      <div
                        className="bx--form-item"
                      >
                        <label
                          className="bx--label"
                          htmlFor="datetimepicker25-start-time"
                        >
                          Start time
                        </label>
                        <div
                          className="bx--time-picker bx--time-picker--light"
                        >
                          <div
                            className="bx--time-picker__input"
                          >
                            <input
                              autoComplete="off"
                              className="bx--time-picker__input-field bx--text-input bx--text-input--light"
                              data-testid="time-picker-spinner"
                              disabled={false}
                              id="datetimepicker25-start-time"
                              maxLength={5}
                              onBlur={[Function]}
                              onChange={[Function]}
                              onClick={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              pattern="(1[012]|[1-9]):[0-5][0-9](\\\\s)?"
                              placeholder="hh:mm"
                              type="text"
                              value="12:34"
                            />
                          </div>
                          <div
                            className="iot--time-picker__controls"
                          >
                            <button
                              aria-atomic="true"
                              aria-label="Increment hours"
                              aria-live="polite"
                              className="iot--time-picker__controls--btn up-icon"
                              data-testid="time-picker-spinner-up-button"
                              disabled={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onMouseOut={[Function]}
                              onMouseOver={[Function]}
                              title="Increment hours"
                              type="button"
                            >
                              <svg
                                aria-hidden={true}
                                className="up-icon"
                                fill="currentColor"
                                focusable="false"
                                height={4}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 8 4"
                                width={8}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M0 4L4 0 8 4z"
                                />
                              </svg>
                            </button>
                            <button
                              aria-atomic="true"
                              aria-label="Decrement hours"
                              aria-live="polite"
                              className="iot--time-picker__controls--btn down-icon"
                              data-testid="time-picker-spinner-down-button"
                              disabled={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onMouseOut={[Function]}
                              onMouseOver={[Function]}
                              title="Decrement hours"
                              type="button"
                            >
                              <svg
                                aria-hidden={true}
                                className="down-icon"
                                fill="currentColor"
                                focusable="false"
                                height={4}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 8 4"
                                width={8}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 0L4 4 0 0z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="iot--time-picker__wrapper iot--time-picker__wrapper--with-spinner"
                      data-testid="time-picker-spinner-wrapper"
                    >
                      <div
                        className="bx--form-item"
                      >
                        <label
                          className="bx--label"
                          htmlFor="datetimepicker25-end-time"
                        >
                          End time
                        </label>
                        <div
                          className="bx--time-picker bx--time-picker--light"
                        >
                          <div
                            className="bx--time-picker__input"
                          >
                            <input
                              autoComplete="off"
                              className="bx--time-picker__input-field bx--text-input bx--text-input--light"
                              data-testid="time-picker-spinner"
                              disabled={false}
                              id="datetimepicker25-end-time"
                              maxLength={5}
                              onBlur={[Function]}
                              onChange={[Function]}
                              onClick={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              pattern="(1[012]|[1-9]):[0-5][0-9](\\\\s)?"
                              placeholder="hh:mm"
                              type="text"
                              value="10:49"
                            />
                          </div>
                          <div
                            className="iot--time-picker__controls"
                          >
                            <button
                              aria-atomic="true"
                              aria-label="Increment hours"
                              aria-live="polite"
                              className="iot--time-picker__controls--btn up-icon"
                              data-testid="time-picker-spinner-up-button"
                              disabled={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onMouseOut={[Function]}
                              onMouseOver={[Function]}
                              title="Increment hours"
                              type="button"
                            >
                              <svg
                                aria-hidden={true}
                                className="up-icon"
                                fill="currentColor"
                                focusable="false"
                                height={4}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 8 4"
                                width={8}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M0 4L4 0 8 4z"
                                />
                              </svg>
                            </button>
                            <button
                              aria-atomic="true"
                              aria-label="Decrement hours"
                              aria-live="polite"
                              className="iot--time-picker__controls--btn down-icon"
                              data-testid="time-picker-spinner-down-button"
                              disabled={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onMouseOut={[Function]}
                              onMouseOver={[Function]}
                              title="Decrement hours"
                              type="button"
                            >
                              <svg
                                aria-hidden={true}
                                className="down-icon"
                                fill="currentColor"
                                focusable="false"
                                height={4}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 8 4"
                                width={8}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 0L4 4 0 0z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            className="iot--date-time-picker__menu-btn-set"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--date-time-picker__menu-btn iot--date-time-picker__menu-btn-back bx--btn bx--btn--md bx--btn--secondary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              Back
            </button>
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--date-time-picker__menu-btn iot--date-time-picker__menu-btn-apply bx--btn bx--btn--md bx--btn--primary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Date time range selector/DateTime Picker Selected absolute 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--date-time-picker__wrapper"
      data-testid="date-time-picker"
      id="datetimepicker-iot--date-time-picker__wrapper"
      onKeyDown={[Function]}
    >
      <div
        className="iot--date-time-picker__box "
      >
        <div
          className="iot--date-time-picker__field"
          data-testid="date-time-picker__field"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            title="2020-04-01 12:34 to 2020-04-06 10:49"
          >
            2020-04-01 12:34 to 2020-04-06 10:49
          </span>
          <svg
            aria-label="Calendar"
            className="iot--date-time-picker__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </div>
        <div
          className="iot--date-time-picker__menu"
          role="listbox"
        >
          <div
            className="iot--date-time-picker__menu-scroll"
          >
            <div
              className="iot--date-time-picker__custom-wrapper"
            >
              <fieldset
                className="bx--fieldset iot--date-time-picker__menu-formgroup"
              >
                <legend
                  className="bx--label iot--date-time-picker__menu-formgroup"
                >
                  Custom range
                </legend>
                <div
                  className="bx--form-item"
                >
                  <fieldset
                    className="bx--radio-button-group bx--radio-button-group--label-right"
                  >
                    <div
                      className="bx--radio-button-wrapper"
                    >
                      <input
                        checked={false}
                        className="bx--radio-button"
                        id="datetimepicker-relative"
                        name="datetimepicker-radiogroup"
                        onChange={[Function]}
                        onKeyDown={[Function]}
                        type="radio"
                        value="RELATIVE"
                      />
                      <label
                        className="bx--radio-button__label"
                        htmlFor="datetimepicker-relative"
                      >
                        <span
                          className="bx--radio-button__appearance"
                        />
                        <span
                          className=""
                          dir="auto"
                        >
                          Relative
                        </span>
                      </label>
                    </div>
                    <div
                      className="bx--radio-button-wrapper"
                    >
                      <input
                        checked={true}
                        className="bx--radio-button"
                        id="datetimepicker-absolute"
                        name="datetimepicker-radiogroup"
                        onChange={[Function]}
                        onKeyDown={[Function]}
                        type="radio"
                        value="ABSOLUTE"
                      />
                      <label
                        className="bx--radio-button__label"
                        htmlFor="datetimepicker-absolute"
                      >
                        <span
                          className="bx--radio-button__appearance"
                        />
                        <span
                          className=""
                          dir="auto"
                        >
                          Absolute
                        </span>
                      </label>
                    </div>
                  </fieldset>
                </div>
              </fieldset>
              <div
                data-testid="date-time-picker-datepicker"
              >
                <div
                  className="iot--date-time-picker__datepicker"
                >
                  <div
                    className="bx--form-item"
                  >
                    <div
                      className="bx--date-picker bx--date-picker--range bx--date-picker--nolabel"
                      onClose={[Function]}
                    >
                      <div
                        className="bx--date-picker-container bx--date-picker--nolabel"
                      >
                        <div
                          className="bx--date-picker-input__wrapper"
                        >
                          <input
                            className="bx--date-picker__input"
                            disabled={false}
                            id="datetimepicker-date-picker-input-start"
                            onChange={[Function]}
                            onClick={[Function]}
                            pattern="\\\\d{1,2}\\\\/\\\\d{1,2}\\\\/\\\\d{4}"
                            type="text"
                          />
                          <svg
                            aria-hidden={true}
                            className="bx--date-picker__icon"
                            fill="currentColor"
                            focusable="false"
                            height={16}
                            onClick={[Function]}
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            viewBox="0 0 32 32"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        className="bx--date-picker-container bx--date-picker--nolabel"
                      >
                        <div
                          className="bx--date-picker-input__wrapper"
                        >
                          <input
                            className="bx--date-picker__input"
                            disabled={false}
                            id="datetimepicker-date-picker-input-end"
                            onChange={[Function]}
                            onClick={[Function]}
                            pattern="\\\\d{1,2}\\\\/\\\\d{1,2}\\\\/\\\\d{4}"
                            type="text"
                          />
                          <svg
                            aria-hidden={true}
                            className="bx--date-picker__icon"
                            fill="currentColor"
                            focusable="false"
                            height={16}
                            onClick={[Function]}
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            viewBox="0 0 32 32"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <fieldset
                  className="bx--fieldset iot--date-time-picker__menu-formgroup"
                >
                  <legend
                    className="bx--label iot--date-time-picker__menu-formgroup"
                  >
                    
                  </legend>
                  <div
                    className="iot--date-time-picker__fields-wrapper"
                  >
                    <div
                      className="iot--time-picker__wrapper iot--time-picker__wrapper--with-spinner"
                      data-testid="time-picker-spinner-wrapper"
                    >
                      <div
                        className="bx--form-item"
                      >
                        <label
                          className="bx--label"
                          htmlFor="datetimepicker-start-time"
                        >
                          Start time
                        </label>
                        <div
                          className="bx--time-picker bx--time-picker--light"
                        >
                          <div
                            className="bx--time-picker__input"
                          >
                            <input
                              autoComplete="off"
                              className="bx--time-picker__input-field bx--text-input bx--text-input--light"
                              data-testid="time-picker-spinner"
                              disabled={false}
                              id="datetimepicker-start-time"
                              maxLength={5}
                              onBlur={[Function]}
                              onChange={[Function]}
                              onClick={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              pattern="(1[012]|[1-9]):[0-5][0-9](\\\\s)?"
                              placeholder="hh:mm"
                              type="text"
                              value="12:34"
                            />
                          </div>
                          <div
                            className="iot--time-picker__controls"
                          >
                            <button
                              aria-atomic="true"
                              aria-label="Increment hours"
                              aria-live="polite"
                              className="iot--time-picker__controls--btn up-icon"
                              data-testid="time-picker-spinner-up-button"
                              disabled={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onMouseOut={[Function]}
                              onMouseOver={[Function]}
                              title="Increment hours"
                              type="button"
                            >
                              <svg
                                aria-hidden={true}
                                className="up-icon"
                                fill="currentColor"
                                focusable="false"
                                height={4}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 8 4"
                                width={8}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M0 4L4 0 8 4z"
                                />
                              </svg>
                            </button>
                            <button
                              aria-atomic="true"
                              aria-label="Decrement hours"
                              aria-live="polite"
                              className="iot--time-picker__controls--btn down-icon"
                              data-testid="time-picker-spinner-down-button"
                              disabled={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onMouseOut={[Function]}
                              onMouseOver={[Function]}
                              title="Decrement hours"
                              type="button"
                            >
                              <svg
                                aria-hidden={true}
                                className="down-icon"
                                fill="currentColor"
                                focusable="false"
                                height={4}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 8 4"
                                width={8}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 0L4 4 0 0z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="iot--time-picker__wrapper iot--time-picker__wrapper--with-spinner"
                      data-testid="time-picker-spinner-wrapper"
                    >
                      <div
                        className="bx--form-item"
                      >
                        <label
                          className="bx--label"
                          htmlFor="datetimepicker-end-time"
                        >
                          End time
                        </label>
                        <div
                          className="bx--time-picker bx--time-picker--light"
                        >
                          <div
                            className="bx--time-picker__input"
                          >
                            <input
                              autoComplete="off"
                              className="bx--time-picker__input-field bx--text-input bx--text-input--light"
                              data-testid="time-picker-spinner"
                              disabled={false}
                              id="datetimepicker-end-time"
                              maxLength={5}
                              onBlur={[Function]}
                              onChange={[Function]}
                              onClick={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              pattern="(1[012]|[1-9]):[0-5][0-9](\\\\s)?"
                              placeholder="hh:mm"
                              type="text"
                              value="10:49"
                            />
                          </div>
                          <div
                            className="iot--time-picker__controls"
                          >
                            <button
                              aria-atomic="true"
                              aria-label="Increment hours"
                              aria-live="polite"
                              className="iot--time-picker__controls--btn up-icon"
                              data-testid="time-picker-spinner-up-button"
                              disabled={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onMouseOut={[Function]}
                              onMouseOver={[Function]}
                              title="Increment hours"
                              type="button"
                            >
                              <svg
                                aria-hidden={true}
                                className="up-icon"
                                fill="currentColor"
                                focusable="false"
                                height={4}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 8 4"
                                width={8}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M0 4L4 0 8 4z"
                                />
                              </svg>
                            </button>
                            <button
                              aria-atomic="true"
                              aria-label="Decrement hours"
                              aria-live="polite"
                              className="iot--time-picker__controls--btn down-icon"
                              data-testid="time-picker-spinner-down-button"
                              disabled={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onMouseOut={[Function]}
                              onMouseOver={[Function]}
                              title="Decrement hours"
                              type="button"
                            >
                              <svg
                                aria-hidden={true}
                                className="down-icon"
                                fill="currentColor"
                                focusable="false"
                                height={4}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 8 4"
                                width={8}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 0L4 4 0 0z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            className="iot--date-time-picker__menu-btn-set"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--date-time-picker__menu-btn iot--date-time-picker__menu-btn-back bx--btn bx--btn--md bx--btn--secondary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              Back
            </button>
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--date-time-picker__menu-btn iot--date-time-picker__menu-btn-apply bx--btn bx--btn--md bx--btn--primary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Date time range selector/DateTime Picker Selected preset 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--date-time-picker__wrapper"
      data-testid="date-time-picker"
      id="datetimepicker-iot--date-time-picker__wrapper"
      onKeyDown={[Function]}
    >
      <div
        className="iot--date-time-picker__box "
      >
        <div
          className="iot--date-time-picker__field"
          data-testid="date-time-picker__field"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="bx--tooltip--definition bx--tooltip--a11y"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <button
              aria-describedby="definition-tooltip-4"
              className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
              onBlur={[Function]}
              onFocus={[Function]}
              type="button"
            >
              Last 12 hours
            </button>
            <span
              className="bx--assistive-text"
              id="definition-tooltip-4"
              role="tooltip"
            >
              2018-10-27 19:34 to Now
            </span>
          </span>
          <svg
            aria-label="Calendar"
            className="iot--date-time-picker__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </div>
        <div
          className="iot--date-time-picker__menu"
          role="listbox"
        >
          <div
            className="iot--date-time-picker__menu-scroll"
          >
            <div
              onKeyDown={[Function]}
            >
              <ol
                className="bx--list--ordered"
              >
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--current"
                >
                  2018-10-27 19:34 to Now
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--custom"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Custom Range
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 30 minutes
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 1 hour
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 6 hours
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset iot--date-time-picker__listitem--preset-selected"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 12 hours
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 24 hours
                </li>
              </ol>
            </div>
          </div>
          <div
            className="iot--date-time-picker__menu-btn-set"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--date-time-picker__menu-btn iot--date-time-picker__menu-btn-cancel bx--btn bx--btn--md bx--btn--secondary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              Cancel
            </button>
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--date-time-picker__menu-btn iot--date-time-picker__menu-btn-apply bx--btn bx--btn--md bx--btn--primary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Date time range selector/DateTime Picker Selected relative 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--date-time-picker__wrapper"
      data-testid="date-time-picker"
      id="datetimepicker-iot--date-time-picker__wrapper"
      onKeyDown={[Function]}
    >
      <div
        className="iot--date-time-picker__box "
      >
        <div
          className="iot--date-time-picker__field"
          data-testid="date-time-picker__field"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            title="2018-10-28 13:10 to 2018-10-28 13:30"
          >
            2018-10-28 13:10 to 2018-10-28 13:30
          </span>
          <svg
            aria-label="Calendar"
            className="iot--date-time-picker__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </div>
        <div
          className="iot--date-time-picker__menu"
          role="listbox"
        >
          <div
            className="iot--date-time-picker__menu-scroll"
          >
            <div
              className="iot--date-time-picker__custom-wrapper"
            >
              <fieldset
                className="bx--fieldset iot--date-time-picker__menu-formgroup"
              >
                <legend
                  className="bx--label iot--date-time-picker__menu-formgroup"
                >
                  Custom range
                </legend>
                <div
                  className="bx--form-item"
                >
                  <fieldset
                    className="bx--radio-button-group bx--radio-button-group--label-right"
                  >
                    <div
                      className="bx--radio-button-wrapper"
                    >
                      <input
                        checked={true}
                        className="bx--radio-button"
                        id="datetimepicker-relative"
                        name="datetimepicker-radiogroup"
                        onChange={[Function]}
                        onKeyDown={[Function]}
                        type="radio"
                        value="RELATIVE"
                      />
                      <label
                        className="bx--radio-button__label"
                        htmlFor="datetimepicker-relative"
                      >
                        <span
                          className="bx--radio-button__appearance"
                        />
                        <span
                          className=""
                          dir="auto"
                        >
                          Relative
                        </span>
                      </label>
                    </div>
                    <div
                      className="bx--radio-button-wrapper"
                    >
                      <input
                        checked={false}
                        className="bx--radio-button"
                        id="datetimepicker-absolute"
                        name="datetimepicker-radiogroup"
                        onChange={[Function]}
                        onKeyDown={[Function]}
                        type="radio"
                        value="ABSOLUTE"
                      />
                      <label
                        className="bx--radio-button__label"
                        htmlFor="datetimepicker-absolute"
                      >
                        <span
                          className="bx--radio-button__appearance"
                        />
                        <span
                          className=""
                          dir="auto"
                        >
                          Absolute
                        </span>
                      </label>
                    </div>
                  </fieldset>
                </div>
              </fieldset>
              <div>
                <fieldset
                  className="bx--fieldset iot--date-time-picker__menu-formgroup"
                >
                  <legend
                    className="bx--label iot--date-time-picker__menu-formgroup"
                  >
                    Last
                  </legend>
                  <div
                    className="iot--date-time-picker__fields-wrapper iot--date-time-picker__fields-wrapper--with-gap"
                  >
                    <div
                      className="bx--form-item"
                    >
                      <div
                        className="bx--number bx--number--helpertext bx--number--light"
                      >
                        <div
                          className="bx--number__input-wrapper"
                        >
                          <input
                            aria-describedby={null}
                            aria-label="Numeric input field with increment and decrement buttons"
                            disabled={false}
                            id="datetimepicker-last-number"
                            min={0}
                            onChange={[Function]}
                            pattern="[0-9]*"
                            step={1}
                            type="number"
                            value={20}
                          />
                          <div
                            className="bx--number__controls"
                          >
                            <button
                              aria-label="Decrement number"
                              className="bx--number__control-btn down-icon"
                              disabled={false}
                              onClick={[Function]}
                              tabIndex="-1"
                              title="Decrement number"
                              type="button"
                            >
                              <svg
                                aria-hidden={true}
                                className="down-icon"
                                fill="currentColor"
                                focusable="false"
                                height={16}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 32 32"
                                width={16}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 15H24V17H8z"
                                />
                              </svg>
                            </button>
                            <div
                              className="bx--number__rule-divider"
                            />
                            <button
                              aria-label="Increment number"
                              className="bx--number__control-btn up-icon"
                              disabled={false}
                              onClick={[Function]}
                              tabIndex="-1"
                              title="Increment number"
                              type="button"
                            >
                              <svg
                                aria-hidden={true}
                                className="up-icon"
                                fill="currentColor"
                                focusable="false"
                                height={16}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 32 32"
                                width={16}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                                />
                              </svg>
                            </button>
                            <div
                              className="bx--number__rule-divider"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="bx--form-item"
                    >
                      <div
                        className="bx--select bx--select--light"
                      >
                        <label
                          className="bx--label bx--visually-hidden"
                          htmlFor="datetimepicker-last-interval"
                        >
                          Select
                        </label>
                        <div
                          className="bx--select-input__wrapper"
                          data-invalid={null}
                        >
                          <select
                            className="bx--select-input"
                            defaultValue="MINUTES"
                            id="datetimepicker-last-interval"
                            onChange={[Function]}
                          >
                            <option
                              className="bx--select-option"
                              disabled={false}
                              hidden={false}
                              value="MINUTES"
                            >
                              minutes
                            </option>
                            <option
                              className="bx--select-option"
                              disabled={false}
                              hidden={false}
                              value="HOURS"
                            >
                              hours
                            </option>
                            <option
                              className="bx--select-option"
                              disabled={false}
                              hidden={false}
                              value="DAYS"
                            >
                              days
                            </option>
                            <option
                              className="bx--select-option"
                              disabled={false}
                              hidden={false}
                              value="WEEKS"
                            >
                              weeks
                            </option>
                            <option
                              className="bx--select-option"
                              disabled={false}
                              hidden={false}
                              value="MONTHS"
                            >
                              months
                            </option>
                            <option
                              className="bx--select-option"
                              disabled={false}
                              hidden={false}
                              value="YEARS"
                            >
                              years
                            </option>
                          </select>
                          <svg
                            aria-hidden={true}
                            className="bx--select__arrow"
                            fill="currentColor"
                            focusable="false"
                            height={16}
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 16 16"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </fieldset>
                <fieldset
                  className="bx--fieldset iot--date-time-picker__menu-formgroup"
                >
                  <legend
                    className="bx--label iot--date-time-picker__menu-formgroup"
                  >
                    Relative to
                  </legend>
                  <div
                    className="iot--date-time-picker__fields-wrapper iot--date-time-picker__fields-wrapper--with-gap"
                  >
                    <div
                      className="bx--form-item"
                    >
                      <div
                        className="bx--select bx--select--light"
                      >
                        <label
                          className="bx--label bx--visually-hidden"
                          htmlFor="datetimepicker-relative-to-when"
                        >
                          Select
                        </label>
                        <div
                          className="bx--select-input__wrapper"
                          data-invalid={null}
                        >
                          <select
                            className="bx--select-input"
                            defaultValue="TODAY"
                            id="datetimepicker-relative-to-when"
                            onChange={[Function]}
                          >
                            <option
                              className="bx--select-option"
                              disabled={false}
                              hidden={false}
                              value="TODAY"
                            >
                              Today
                            </option>
                            <option
                              className="bx--select-option"
                              disabled={false}
                              hidden={false}
                              value="YESTERDAY"
                            >
                              Yesterday
                            </option>
                          </select>
                          <svg
                            aria-hidden={true}
                            className="bx--select__arrow"
                            fill="currentColor"
                            focusable="false"
                            height={16}
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 16 16"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      className="iot--time-picker__wrapper iot--time-picker__wrapper--with-spinner"
                      data-testid="time-picker-spinner-wrapper"
                    >
                      <div
                        className="bx--form-item"
                      >
                        <div
                          className="bx--time-picker bx--time-picker--light"
                        >
                          <div
                            className="bx--time-picker__input"
                          >
                            <input
                              autoComplete="off"
                              className="bx--time-picker__input-field bx--text-input bx--text-input--light"
                              data-testid="time-picker-spinner"
                              disabled={false}
                              id="datetimepicker-relative-to-time"
                              maxLength={5}
                              onBlur={[Function]}
                              onChange={[Function]}
                              onClick={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              pattern="(1[012]|[1-9]):[0-5][0-9](\\\\s)?"
                              placeholder="hh:mm"
                              type="text"
                              value="13:30"
                            />
                          </div>
                          <div
                            className="iot--time-picker__controls"
                          >
                            <button
                              aria-atomic="true"
                              aria-label="Increment hours"
                              aria-live="polite"
                              className="iot--time-picker__controls--btn up-icon"
                              data-testid="time-picker-spinner-up-button"
                              disabled={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onMouseOut={[Function]}
                              onMouseOver={[Function]}
                              title="Increment hours"
                              type="button"
                            >
                              <svg
                                aria-hidden={true}
                                className="up-icon"
                                fill="currentColor"
                                focusable="false"
                                height={4}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 8 4"
                                width={8}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M0 4L4 0 8 4z"
                                />
                              </svg>
                            </button>
                            <button
                              aria-atomic="true"
                              aria-label="Decrement hours"
                              aria-live="polite"
                              className="iot--time-picker__controls--btn down-icon"
                              data-testid="time-picker-spinner-down-button"
                              disabled={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onMouseOut={[Function]}
                              onMouseOver={[Function]}
                              title="Decrement hours"
                              type="button"
                            >
                              <svg
                                aria-hidden={true}
                                className="down-icon"
                                fill="currentColor"
                                focusable="false"
                                height={4}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 8 4"
                                width={8}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 0L4 4 0 0z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            className="iot--date-time-picker__menu-btn-set"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--date-time-picker__menu-btn iot--date-time-picker__menu-btn-back bx--btn bx--btn--md bx--btn--secondary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              Back
            </button>
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--date-time-picker__menu-btn iot--date-time-picker__menu-btn-apply bx--btn bx--btn--md bx--btn--primary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Date time range selector/DateTime Picker Without a custom range link 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--date-time-picker__wrapper"
      data-testid="date-time-picker"
      id="datetimepicker-iot--date-time-picker__wrapper"
      onKeyDown={[Function]}
    >
      <div
        className="iot--date-time-picker__box "
      >
        <div
          className="iot--date-time-picker__field"
          data-testid="date-time-picker__field"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="bx--tooltip--definition bx--tooltip--a11y"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <button
              aria-describedby="definition-tooltip-8"
              className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
              onBlur={[Function]}
              onFocus={[Function]}
              type="button"
            >
              Last 12 hours
            </button>
            <span
              className="bx--assistive-text"
              id="definition-tooltip-8"
              role="tooltip"
            >
              2018-10-27 19:34 to Now
            </span>
          </span>
          <svg
            aria-label="Calendar"
            className="iot--date-time-picker__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </div>
        <div
          className="iot--date-time-picker__menu"
          role="listbox"
        >
          <div
            className="iot--date-time-picker__menu-scroll"
          >
            <div
              onKeyDown={[Function]}
            >
              <ol
                className="bx--list--ordered"
              >
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--current"
                >
                  2018-10-27 19:34 to Now
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 30 minutes
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 1 hour
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 6 hours
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset iot--date-time-picker__listitem--preset-selected"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 12 hours
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 24 hours
                </li>
              </ol>
            </div>
          </div>
          <div
            className="iot--date-time-picker__menu-btn-set"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--date-time-picker__menu-btn iot--date-time-picker__menu-btn-cancel bx--btn bx--btn--md bx--btn--secondary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              Cancel
            </button>
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--date-time-picker__menu-btn iot--date-time-picker__menu-btn-apply bx--btn bx--btn--md bx--btn--primary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Date time range selector/DateTime Picker Without a relative option 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--date-time-picker__wrapper"
      data-testid="date-time-picker"
      id="datetimepicker-iot--date-time-picker__wrapper"
      onKeyDown={[Function]}
    >
      <div
        className="iot--date-time-picker__box "
      >
        <div
          className="iot--date-time-picker__field"
          data-testid="date-time-picker__field"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="bx--tooltip--definition bx--tooltip--a11y"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <button
              aria-describedby="definition-tooltip-6"
              className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
              onBlur={[Function]}
              onFocus={[Function]}
              type="button"
            >
              Last 12 hours
            </button>
            <span
              className="bx--assistive-text"
              id="definition-tooltip-6"
              role="tooltip"
            >
              2018-10-27 19:34 to Now
            </span>
          </span>
          <svg
            aria-label="Calendar"
            className="iot--date-time-picker__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </div>
        <div
          className="iot--date-time-picker__menu"
          role="listbox"
        >
          <div
            className="iot--date-time-picker__menu-scroll"
          >
            <div
              onKeyDown={[Function]}
            >
              <ol
                className="bx--list--ordered"
              >
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--current"
                >
                  2018-10-27 19:34 to Now
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--custom"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Custom Range
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 30 minutes
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 1 hour
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 6 hours
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset iot--date-time-picker__listitem--preset-selected"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 12 hours
                </li>
                <li
                  className="bx--list__item iot--date-time-picker__listitem iot--date-time-picker__listitem--preset"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  Last 24 hours
                </li>
              </ol>
            </div>
          </div>
          <div
            className="iot--date-time-picker__menu-btn-set"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--date-time-picker__menu-btn iot--date-time-picker__menu-btn-cancel bx--btn bx--btn--md bx--btn--secondary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              Cancel
            </button>
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--date-time-picker__menu-btn iot--date-time-picker__menu-btn-apply bx--btn bx--btn--md bx--btn--primary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
